syntax = "proto3";

package events.v1;

import "google/protobuf/timestamp.proto";

message Event {
  string description = 1;
  map<string, string> tags = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message EventChunk {
  repeated Event events = 1;
  int32 page = 2;
}

message GetEventRequest {
  message Interval {
    google.protobuf.Timestamp start = 1;
    google.protobuf.Timestamp end = 2;
  }
  Interval interval = 1;
  int32 page = 2;
  map<string, string> tags = 3;
}

service SearchService {
  rpc GetEventChunk(GetEventRequest) returns (stream EventChunk) {}
}
